<resources>
    <string name="app_name">Pet Care Application</string>
    <string name="new_pet_name">Введите имя Вашего питомца:</string>
    <string name="new_pet_name_hint">Барсик</string>
    <string name="create_pet_button">Создать питомца</string>
    <string name="input_hint">Укажите пол и тип питомца:</string>
    <string name="spinner_gender_content">Пол домашнего животного</string>
    <string name="spinner_type_content">Тип питомца</string>
    <string name="menu_clear_all_data">Очистить данные</string>
    <string name="pet_portrait">Портрет питомца</string>
    <string name="date_of_birth_label">Укажите дату рождения питомца:</string>
    <string name="date_of_birth_link_text"><u>Выбрать дату…</u></string>
    <string name="spinner_breed_content">Порода питомца</string>
    <string name="breed_hint">Укажите породу питомца:</string>
    <string name="button_create_reminder">Создать напоминание</string>
    <string name="spinner_activity_type_label">Выберите тип активности</string>
    <string name="reminder_date_hint"><u>Выбрать дату…</u></string>
    <string name="button_open_reminders_list">Спиcок напоминаний</string>
    <string name="button_analyzes_text">Результаты анализов</string>
    <string name="button_information_text">Подробная информация</string>
    <string name="last_event_label">Ближайшее событие</string>
    <string name="reminder_date_label">Выберите дату напоминания</string>
    <string name="create_new_reminder_button">Создать напоминание</string>
    <string name="button_add_new_text">+</string>
    <string name="reminder_time_hint"><u>Выбрать время…</u></string>
    <string-array name="cat_breeds">
        <item>Абиссинская кошка</item>
        <item>Австралийский мист</item>
        <item>Азиатская (табби)</item>
        <item>Американская</item>
        <item>Американский бобтейл</item>
        <item>Американский кёрл</item>
        <item>Анатолийская</item>
        <item>Аравийский мау</item>
        <item>Балинезийская (Балинез, балийская)</item>
        <item>Без породы</item>
        <item>Бенгальская</item>
        <item>Бомбейская</item>
        <item>Бразильская</item>
        <item>Британская</item>
        <item>Бурма (Бурманская)</item>
        <item>Бурмилла</item>
        <item>Гавана</item>
        <item>Гималайская кошка</item>
        <item>Девон рекс</item>
        <item>Домашняя</item>
        <item>Донской сфинкс</item>
        <item>Донской сфинкс</item>
        <item>Египетская мау</item>
        <item>Йорк</item>
        <item>Калифорнийская сияющая</item>
        <item>Канаани</item>
        <item>Кельтская (Европейская короткошёрстная)</item>
        <item>Кимрик</item>
        <item>Колорпойнт</item>
        <item>Корат</item>
        <item>Корниш рекс</item>
        <item>Курильский бобтейл</item>
        <item>Лаперм</item>
        <item>Манчкин</item>
        <item>Мейн-кун</item>
        <item>Меконгский бобтейл</item>
        <item>Мэнкс (Мэнская кошка)</item>
        <item>Невская маскарадная</item>
        <item>Немецкий рекс</item>
        <item>Нибелунг</item>
        <item>Норвежская лесная</item>
        <item>Ориентальная</item>
        <item>Оцикет</item>
        <item>Персидская (Колорпойнт)</item>
        <item>Петерболд</item>
        <item>Пиксибоб</item>
        <item>Рагамаффин</item>
        <item>Русская голубая</item>
        <item>Рэгдолл</item>
        <item>Саванна</item>
        <item>Священная бирманская</item>
        <item>Сейшельская</item>
        <item>Селкирк рекс</item>
        <item>Серенгети</item>
        <item>Сиамская</item>
        <item>Сибирская</item>
        <item>Сингапурская</item>
        <item>Скоттиш страйт</item>
        <item>Скоттиш фолд</item>
        <item>Сноу-Шу</item>
        <item>Сококе</item>
        <item>Сомали</item>
        <item>Сфинкс (канадский)</item>
        <item>Тайская</item>
        <item>Тойгер</item>
        <item>Тонкинская</item>
        <item>Турецкая ангора</item>
        <item>Турецкий ван</item>
        <item>Украинский левкой</item>
        <item>Форин Вайт</item>
        <item>Хайленд фолд</item>
        <item>Хауси</item>
        <item>Шантильи-тиффани</item>
        <item>Шартрез</item>
        <item>Эгейская</item>
        <item>Экзотическая</item>
        <item>Яванез (Яванская кошка)</item>
        <item>Японский бобтейл</item>
    </string-array>
</resources>