<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutNewReminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameLabel"
        android:textSize="20sp"
        android:textColor="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">
    </TextView>

    <TextView
        android:id="@+id/activityTypeLabel"
        android:text="@string/spinner_activity_type_label"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:labelFor="@+id/spinnerActivityType"

        android:layout_below="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">
    </TextView>

    <Spinner
        android:id="@+id/spinnerActivityType"
        android:textAlignment="center"
        android:layout_below="@+id/activityTypeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="48dp">
    </Spinner>

    <TextView
        android:id="@+id/dateLabel"
        android:text="@string/reminder_date_label"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:layout_marginTop="15dp"
        android:layout_below="@+id/spinnerActivityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
    </TextView>

    <TextView
        android:id="@+id/reminderDate"
        android:text="@string/reminder_date_hint"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:fontFamily="@font/finlandica_italic_variablefont_wght"

        android:layout_marginTop="10dp"
        android:layout_below="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
    </TextView>

    <TextView
        android:id="@+id/reminderTime"
        android:text="@string/reminder_time_hint"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:fontFamily="@font/finlandica_italic_variablefont_wght"

        android:layout_marginTop="10dp"
        android:layout_below="@+id/reminderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
    </TextView>

    <CheckBox
        android:text="Создать новое напоминание после завершения"
        android:textSize="16sp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/reminderTime"
        android:layout_marginTop="15dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content">
    </CheckBox>

    <Button
        android:id="@+id/createNewReminder"
        android:text="@string/create_new_reminder_button"
        android:textSize="20sp"
        style="@style/SystemButtonStyle"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </Button>
</RelativeLayout>