<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutPetPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/petName"
        style="@style/TextViewPrimary"
        android:textSize="25sp"
        android:textColor="@color/black"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayoutInfo"
        android:layout_below="@+id/petName"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        tools:ignore="UselessParent">
        <ImageView
            android:src="@drawable/dog"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/pet_portrait">
        </ImageView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@id/petType"
                style="@style/TextViewPrimary"
                android:layout_alignParentStart="true">
            </TextView>

            <TextView
                android:id="@+id/petGender"
                style="@style/TextViewPrimary"
                android:layout_below="@+id/petType"
                android:layout_alignParentStart="true">
            </TextView>

            <TextView
                android:id="@+id/petBreed"
                style="@style/TextViewPrimary"
                android:maxLines="1"
                android:layout_below="@id/petGender"
                android:layout_alignParentStart="true">
            </TextView>

            <TextView
                android:id="@+id/petAge"
                style="@style/TextViewPrimary"
                android:layout_below="@id/petBreed"
                android:layout_alignParentStart="true">
            </TextView>

            <TextView
                android:id="@+id/petBirthday"
                style="@style/TextViewPrimary"
                android:layout_below="@id/petAge"
                android:layout_alignParentStart="true">
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/petPageReminderLabel"
        android:text="@string/last_event_label"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">
    </TextView>

    <include
        android:id="@+id/petPageReminder"
        layout="@layout/reminder_element"
        android:layout_below="@id/petPageReminderLabel"
        android:layout_height="140dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true">
    </include>

    <LinearLayout
        android:id="@+id/informationAnalyzesButtonsLayout"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_above="@+id/openRemindersList"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/buttonInformation"
            android:text="@string/button_information_text"
            android:textColor="@color/white"
            style="@style/SystemButtonStyle"
            android:textSize="13sp"
            android:layout_marginEnd="10dp"
            android:layout_width="140dp"
            android:layout_height="70dp">
        </Button>

        <Button
            android:id="@+id/buttonAnalyzes"
            android:text="@string/button_analyzes_text"
            android:textColor="@color/white"
            style="@style/SystemButtonStyle"
            android:textSize="13sp"
            android:layout_marginStart="10dp"
            android:layout_width="140dp"
            android:layout_height="70dp">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/openRemindersList"
        android:text="@string/button_open_reminders_list"
        android:textSize="13sp"
        android:textColor="@color/white"
        style="@style/SystemButtonStyle"

        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/createReminder"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true">
    </Button>

    <Button
        android:id="@+id/createReminder"
        android:text="@string/button_create_reminder"
        android:textSize="13sp"
        android:textColor="@color/white"
        style="@style/SystemButtonStyle"

        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true">
    </Button>
</RelativeLayout>